--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -123,9 +123,9 @@
         </p>
         <p class="blank-line">&nbsp;</p>
         <p class="blank-line">Artisti.co</p>
-        <p class="blank-line">Address: [Your Address]</p>
-        <p class="blank-line">Email: [Your Contact Email]</p>
-        <p class="blank-line">Phone: [Your Contact Phone]</p>
+        <p class="blank-line">Address: Mercadejas Complex Bldg. Alabang </p>
+        <p class="blank-line">Email: www.artisti.co.com.ph</p>
+        <p class="blank-line">Phone: 0919 654 0802 </p>
         <p class="blank-line">&nbsp;</p>
         <p class="blank-line">Changes to Privacy Policy:</p>
         <p class="blank-line">&nbsp;</p>
